{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PlayerOnGround",
            "id": "cbd9cc0b-4d49-4669-b442-c0716d3c562f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0b92aee6-9ead-4371-b0d5-592d43ef3043",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "51626832-7e9a-4a25-8669-318f3fbe283d",
                    "expectedControlType": "",
                    "processors": "Normalize,Normalize",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Tackle",
                    "type": "Button",
                    "id": "36dfb7b2-ffda-41c7-8c8c-705a721a9dd4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c6c0e72b-9a2f-474f-acf4-027bb8e7b207",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fb27fd8-b6a9-4b7f-bc15-ffeac361a5d8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "6cc4360b-b1eb-416b-94e6-cbcbf56b60cf",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tackle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "650dae89-9a83-4929-a404-01d9f95a52ad",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tackle",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}